Add some basic styling

--- a/GummiBearKingdom/wwwroot/css/site.css
+++ b/GummiBearKingdom/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 ﻿body {
-    padding-top: 50px;
+    background-image: url(../images/cbr-sky.jpg);
+    padding-top: 0;
     padding-bottom: 20px;
 }
 
@@ -10,26 +11,9 @@
     padding-right: 15px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
+.navbar {
+    background-image: url(../images/cbr-header.png);
+    border: none;
+    border-radius:0;
+    padding: 25px 0;
 }
