add more styling and fix broken links

--- a/GummiBearKingdom/Views/Home/About.cshtml
+++ b/GummiBearKingdom/Views/Home/About.cshtml
@@ -5,3 +5,4 @@
 
 <h2>About</h2>
 
+<h5>We are a family owned business that sells toys, games, and stuffed animals to all the wonderful children of this world!</h5>
