--- a/GummiBearKingdom/Views/Posts/Create.cshtml
+++ b/GummiBearKingdom/Views/Posts/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TextBody" class="control-label"></label>
-                <input asp-for="TextBody" class="form-control" />
+                <textarea asp-for="TextBody" class="form-control"></textarea>
                 <span asp-validation-for="TextBody" class="text-danger"></span>
             </div>
             <div class="form-group">
