--- a/GummiBearKingdom/Views/Posts/Index.cshtml
+++ b/GummiBearKingdom/Views/Posts/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Post List</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 
-<div class="container">
+<div>
     @foreach (var post in Model)
     {
     <div class="row">
@@ -20,14 +20,11 @@
                     <div class="panel-heading">
                         
                             <div class="row">
-                                <div class="col-sm-9">
-                                    <h3>@Html.DisplayFor(m => post.Title)</h3>
-                                </div>
-                                <div class="col-sm-3">
+                                    <h4 class="post-title">@Html.DisplayFor(m => post.Title)</h4>
                                     <p class="post-date">@Html.DisplayFor(m => post.PostDate)</p>
-                                </div>
+                                <hr class="post-line"/>
                             </div>
-                            <p>@Html.DisplayFor(m => post.Author)</p>
+                            <p class="post-author">@Html.DisplayFor(m => post.Author)</p>
                         
                     </div>
 
@@ -50,51 +47,4 @@
    
 </div>
 
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Author)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.TextBody)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Topic)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PostDate)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Author)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TextBody)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Topic)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostDate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
