--- a/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -18,30 +18,18 @@
 </head>
 <body>
     <div class="container main">
-        <nav class="navbar navbar-inverse">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GummiBearKingdom</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                        <li><a asp-area="" asp-controller="Producs" asp-action="List">Products</a></li>
-                        <li><a asp-area="" asp-controller="Posts" asp-action="Index">Blog</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
-        <div class="container body-content">
+        <header>
+            <ul>
+                <li><a asp-controller="Products" asp-action="Index" class="brand">GummiBearKingdom</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                <li><a asp-area="" asp-controller="Posts" asp-action="Index">Blog</a></li>
+            </ul>
+        </header>
+
+        <div class="body-content">
             @RenderBody()
             <hr />
             <footer>
